# AIZO_PROJEKT2

./: Algorithms.cpp  Algorithms.h  CMakeLists.txt  Graph.cpp  Graph.h  Utility.h  adjacency_list_data.txt  graph_data.txt  main.cpp
